Bug 443304 - "Restart the application when clicking the Finish button." option does not work
Summary: "Restart the application when clicking the Finish button." option does not work
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-04 13:36 UTC by Patrick Silva
Modified: 2021-10-08 08:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (54.89 KB, image/png)
2021-10-04 13:36 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-10-04 13:36:44 UTC
Created attachment 142142 [details]
screenshot

SUMMARY
See the attached screenshot please. When I check "Restart the application when
clicking the Finish button." and then click on Finish button, drkonqi opens
bugzilla webapge instead of restarting the application.

EXPECTED RESULT
"Restart the application when clicking the Finish button." option should work
as expected.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2021-10-05 10:24:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/46
Comment 2 Harald Sitter 2021-10-08 08:50:37 UTC
Git commit 6b68295f84804781dcd0de5cacbe3b6ce829acd1 by Harald Sitter.
Committed on 08/10/2021 at 08:48.
Pushed by sitter into branch 'master'.

replace restart checkbox with button

for one, this aligns the UX a bit more between crash dialog and report
dialog (the former sports a button, not a checkbox, indeed I'm not sure
why one would want this to be a checkbox). it also removes a bug where
restart-on-finish would not run quick enough to finish before the
application exits, since restarting is an async option because we don't
know how long it really takes - instead of rearchitecturing how app exit
works so it can wait for the restart, it seems more reasonable to simply
have the restart action be a button and the user decide when they want
to stop waiting for the restart to happen. since the button kguititem is
now used in two dialogs it has moved to the globals stuff where there is
a new namespace that mimics KStandardGuiItem but for our guiitems.

visualization logic has also been simplified. with the restart action
now being a button with fairly generic text we can show it regardless of
context so long as the app hadn't been restarted.

M  +1    -0    src/CMakeLists.txt
M  +7    -19   src/bugzillaintegration/assistantpage_conclusion.cpp
M  +7    -24   src/bugzillaintegration/ui/assistantpage_conclusions.ui
A  +17   -0    src/drkonqi_globals.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
M  +6    -1    src/drkonqi_globals.h
M  +1    -6    src/drkonqidialog.cpp

https://invent.kde.org/plasma/drkonqi/commit/6b68295f84804781dcd0de5cacbe3b6ce829acd1