src/drkonqi_globals.h
@@ -1,6 +1,6 @@
 /*
     SPDX-FileCopyrightText: 2009 George Kiagiadakis <gkiagia@users.sourceforge.net>
-
+    SPDX-FileCopyrightText: 2021 Harald Sitter <sitter@kde.org>
     SPDX-License-Identifier: GPL-2.0-or-later
 */
 #ifndef DRKONQI_GLOBALS_H
@@ -22,6 +22,11 @@ public:
     {
     }
 };
+
+namespace DrStandardGuiItem
+{
+KGuiItem2 appRestart();
+}; // namespace StandardGuiItem
 
 /* Urls are defined globally here, so that they can change easily */
 #define KDE_BUGZILLA_URL DrKonqi::kdeBugzillaURL()
